@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 24.04.2022 17:14:58 +0100 - build 5966
+
+1. 0003940: Editor crash when changing codepage to UTF16BE.
+
+--------------------------------------------------------------------------------
 drkns 18.04.2022 03:16:06 +0100 - build 5965
 
 1. Correction of 5955.1.
